<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/com_telenor_connect_darker_gray"
    android:fillViewport="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/com_telenor_connect_error_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="@string/com_telenor_connect_error_text1"
            android:textColor="@color/com_telenor_connect_light_color"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            />
        <TextView
            android:id="@+id/com_telenor_connect_error_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/com_telenor_connect_error_text2"
            android:textColor="@color/com_telenor_connect_light_color"
            android:layout_marginTop="16sp"
            android:textSize="16sp"
            android:layout_below="@id/com_telenor_connect_error_text1"
            />
        <TextView
            android:id="@+id/com_telenor_connect_error_view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/com_telenor_connect_error_text2"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textColor="@color/com_telenor_connect_light_gray"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            />
        <Button
            android:id="@+id/com_telenor_connect_error_view_show_more_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/com_telenor_connect_error_view_text"
            android:text="@string/com_telenor_connect_show_details"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/com_telenor_connect_light_color"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/com_telenor_connect_error_view_details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/com_telenor_connect_error_view_show_more_toggle"
            android:textColor="@color/com_telenor_connect_light_gray"
            android:text="@string/com_telenor_connect_could_not_reach"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/com_telenor_connect_error_view_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/com_telenor_connect_error_view_details_description"
            android:textColor="@color/com_telenor_connect_light_gray"
            android:visibility="gone"
            />
        <ProgressBar
            android:id="@+id/com_telenor_connect_error_view_loading"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ConnectTheme"
            android:visibility="invisible"
            android:layout_above="@id/com_telenor_connect_error_view_try_again"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/com_telenor_connect_error_view_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/com_telenor_connect_try_again"
            android:theme="@style/Theme.AppCompat.Light"
            android:paddingTop="16sp"
            android:paddingBottom="16sp"
            android:textSize="16sp"
            android:layout_marginTop="10sp"
            android:layout_above="@id/com_telenor_connect_error_view_network_settings"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/com_telenor_connect_error_view_network_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/com_telenor_connect_network_settings"
            android:layout_marginTop="8sp"
            android:textSize="16sp"
            android:paddingTop="16sp"
            android:paddingBottom="16sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/com_telenor_connect_light_color"
            android:layout_above="@id/com_telenor_connect_error_view_footer"
            android:layout_centerHorizontal="true"
            />
        <ImageView
            android:id="@+id/com_telenor_connect_error_view_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/connect_by_telenordigital"
            />
    </RelativeLayout>
</ScrollView>
